--- a/src/app/formfield/formfield.component.html
+++ b/src/app/formfield/formfield.component.html
@@ -1,1 +1,14 @@
-<p>formfield works!</p>
+<form>
+    <label>First name:</label><br>
+    <input type="text" name="fname" placeholder="Keanna"><br>
+    <label>Middle name:</label><br>
+    <input type="text" name="mname" placeholder="Paraiso"><br>
+    <label>Last name:</label><br>
+    <input type="text" name="lname" placeholder="Ferrer"><br>
+    <label>Address:</label><br>
+    <input type="textarea" name="address" placeholder="Address"><br>
+    <label>Email:</label><br>
+    <input type="email" name="email" placeholder="keanna.fparaiso@gmail.com"><br>
+    <label>Contact No.:</label><br>
+    <input type="tel" name="contact" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+</form>
